--- a/app/templates/knowitwall.html
+++ b/app/templates/knowitwall.html
@@ -303,24 +303,18 @@
 
     <!-- /.container-fluid -->
     </div>
-
   </nav>
-
-
-
 
   <section class="episode_section_1">
     <div class="episodes_container">
-      <div class="row homepage_box_row">
 
+
+      <div class="row homepage_box_row">
         {% for elem in audiodocs[0:1] %}
 
           <div class="col-md-12 homepage_box_col homepage_box_first_col">
             <a href="episodes/{{elem.url}}">
-
-
                 <!-- for mobile: normal topic_image -->
-<!-- {{elem.topic_image_latest}} -->
 
               <div id="header_image_desktop" data-image= "{{elem.topic_image}}" style="background:url('{{elem.topic_image_latest}}');background-size:cover;background-attachment:scroll" class='homepage_box_episode homepage_box_episode_first'>
 
@@ -353,74 +347,21 @@
             </div>
             </a>
         </div>
-
-        {% endfor %}
-
-      </div>
-
-      <div class="row homepage_box_row">
-        {% for elem in audiodocs[1:3] %}
-          <div class="col-md-{{loop.cycle('5','7')}} homepage_box_col {{loop.cycle('', 'homepage_box_col_2')}}">
-
-            <a href="episodes/{{elem.url}}">
-            <div style="background:url('{{elem.topic_image}}'); background-size:cover;background-attachment:scroll" class='homepage_box_episode'>
-              <div class="homepage_overlay">
-
-                 <p class="box_episode_title">
-                   {{elem.topic_name | safe}}
-                 </p>
-
-               <p class="homepage_box_by-in">
-                 <i>by</i> <span class="highlight">{{elem.author_name | safe}}</span> <i>in</i> <span class="highlight">{{elem.discipline}} </span>
-               </p>
-             <div class="homepage_hidden_info">
-               <p class="homepage_box_abstract">{{elem.topic_description | safe}}</p>
-                {% if elem.audio_mp3 %}
-               <div class="label_wrapper audio_label_wrapper">
-                 <i class="fa fa-volume-up audio-film_label" aria-hidden="true"></i>
-               </div>
-               {% endif %}
-               {% if elem.video_embed %}
-               <div class="label_wrapper film_label_wrapper">
-                 <i class="fa fa-film audio-film_label" aria-hidden="true"></i>
-               </div>
-               {% endif %}
-              </div>
-            </div>
-          </div>
-           </a>
-        </div>
         {% endfor %}
       </div>
 
-    </div> <!-- end of episode_container -->
-  </section>
-      <section class="success" id="about">
-        <div id="about_hidden_anchor">lala</div>
-        <div class="container">
-          <div class="row">
-            <div class="col-md-6 text-center">
-              <div id="about-left">
-              <h2> What are we about?</h2>
-              </div>
-            </div>
-            <div class="col-md-6">
-              <div class="vertical-line about_description">
-              <p class = 'justify'>Know it Wall is a place for inquisitive minds. From sciences to arts, let world-class researchers excite your curiosity.</p>
-              <br>
-              <p class = 'justify'>We work with academics to make audio and video documentaries, as well as short articles, that explain what is cool or interesting about the subjects they dedicate their lives to. From <i>Stegosaurus</i> to Shakespeare, protons to pandemics, there’s no limit to what you could encounter!</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-
-  <section id="episodes2" class="episode_section_2" style="">
-    <div class="episodes_container">
-
+      <!-- Macro for homepage episode boxes. Note how the modulo stuff is defined:
+          This means that episode_1==1 starts with a small box, while episode_1==3
+          starts with a big one. -->
+      {% macro homepage_box(episode_1) %}
+      {% if episode_1 % 4 ==3 %}
+        {% set box_1 = '7' %}{% set box_2 = '5' %}
+        {% else %}
+        {% set box_1 = '5' %}{% set box_2 = '7' %}
+      {% endif %}
       <div class="row homepage_box_row">
-        {% for elem in audiodocs[3:5] %}
-          <div class="col-md-{{loop.cycle('7','5')}} homepage_box_col {{loop.cycle('', 'homepage_box_col_2')}}">
+        {% for elem in audiodocs[episode_1:episode_1+2] %}
+          <div class="col-md-{{loop.cycle(box_1,box_2)}} homepage_box_col {{loop.cycle('', 'homepage_box_col_2')}}">
 
             <a href="episodes/{{elem.url}}">
               <div style="background:url('{{elem.topic_image}}'); background-size:cover;background-attachment:scroll" class='homepage_box_episode'>
@@ -450,94 +391,40 @@
         </div>
         {% endfor %}
       </div>
+      {% endmacro %}
 
-      <div class="row homepage_box_row">
-        {% for elem in audiodocs[5:7] %}
-          <div class="col-md-{{loop.cycle('5','7')}} homepage_box_col {{loop.cycle('', 'homepage_box_col_2')}}">
+      <!-- First row of boxes after the latest episode -->
+     {{ homepage_box( episode_1 = 1 ) }}
 
-            <a href="episodes/{{elem.url}}">
-              <div style="background:url('{{elem.topic_image}}'); background-size:cover;background-attachment:scroll" class='homepage_box_episode'>
-                <div class="homepage_overlay">
+    </div> <!-- end of episode_container -->
 
-                   <p class="box_episode_title">
-                     {{elem.topic_name | safe}}
-                   </p>
-                 <p class="homepage_box_by-in">
-                   <i>by</i> <span class="highlight">{{elem.author_name | safe}}</span> <i>in</i> <span class="highlight">{{elem.discipline}} </span>
-                 </p>
-               <div class="homepage_hidden_info">
-                 <p class="homepage_box_abstract">{{elem.topic_description | safe}}</p>
-                 {% if elem.audio_mp3 %}
-                 <div class="label_wrapper audio_label_wrapper">
-                   <i class="fa fa-volume-up audio-film_label" aria-hidden="true"></i>
-                 </div>
-                 {% endif %}
-                 {% if elem.video_embed %}
-                 <div class="label_wrapper film_label_wrapper">
-                   <i class="fa fa-film audio-film_label" aria-hidden="true"></i>
-                 </div>
-                 {% endif %}
-                </div>
+  </section>
+      <section class="success" id="about">
+        <div id="about_hidden_anchor">lala</div>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6 text-center">
+              <div id="about-left">
+              <h2> What are we about?</h2>
               </div>
             </div>
-          </a>
-        </div>
-        {% endfor %}
-      </div>
-
-      <div class="row homepage_box_row">
-        {% for elem in audiodocs[7:9] %}
-          <div class="col-md-{{loop.cycle('7','5')}} homepage_box_col {{loop.cycle('', 'homepage_box_col_2')}}">
-
-            <a href="episodes/{{elem.url}}">
-              <div style="background:url('{{elem.topic_image}}'); background-size:cover;background-attachment:scroll" class='homepage_box_episode'>
-                <div class="homepage_overlay">
-                   <p class="box_episode_title">
-                     {{elem.topic_name | safe}}
-                   </p>
-                 <p class="homepage_box_by-in">
-                   <i style="color: {{elem.by_in_colour}}">by</i> <span class="highlight">{{elem.author_name | safe}}</span> <i style="color: {{elem.by_in_colour}}">in</i> <span class="highlight">{{elem.discipline}} </span>
-                 </p>
-               <div class="homepage_hidden_info">
-                 <p class="homepage_box_abstract">{{elem.topic_description | safe}}</p>
-                 {% if elem.audio_mp3 %}
-                 <div class="label_wrapper audio_label_wrapper">
-                   <i class="fa fa-volume-up audio-film_label" aria-hidden="true"></i>
-                 </div>
-                 {% endif %}
-                 {% if elem.video_embed %}
-                 <div class="label_wrapper film_label_wrapper">
-                   <i class="fa fa-film audio-film_label" aria-hidden="true"></i>
-                 </div>
-                 {% endif %}
-                </div>
+            <div class="col-md-6">
+              <div class="vertical-line about_description">
+              <p class = 'justify'>Know it Wall is a place for inquisitive minds. From sciences to arts, let world-class researchers excite your curiosity.</p>
+              <br>
+              <p class = 'justify'>We work with academics to make audio and video documentaries, as well as short articles, that explain what is cool or interesting about the subjects they dedicate their lives to. From <i>Stegosaurus</i> to Shakespeare, protons to pandemics, there’s no limit to what you could encounter!</p>
               </div>
             </div>
-          </a>
-
+          </div>
         </div>
-        {% endfor %}
-      </div>
+      </section>
 
-<!--
-TODO: loop over the 3 rows above using nested loops.
-
-testing:
-{% for elem in [1,2,3] %}
-
-  {% set outer_loop  = loop.index - 1 %}
-  outer loop: {{outer_loop}}
-
-  {% for bige in audiodocs[5 + outer_loop*2: 7 + outer_loop*2] %}
-
-episode url: {{bige.url}}
-
-<div class="">
-  number: {{outer_loop*2 + 5}}
-</div>
-  {% endfor %}
-{% endfor %} -->
-
+  <section id="episodes2" class="episode_section_2" style="">
+    <div class="episodes_container">
+    <!-- 3 more rows of boxes after the About section -->
+    {% for ep_num in [3,5,7] %}
+     {{ homepage_box( episode_1 = ep_num ) }}
+    {% endfor %}
 
       </div> <!-- end of episode_container -->
     </section>
