--- a/app/templates/archive_page.html
+++ b/app/templates/archive_page.html
@@ -409,9 +409,13 @@ hidden
             {% endmacro %}
 
 
-      <!-- We need to pass in the episode number but only if it's a multiple of 2 -->
-      {% for ep_num in audiodocs[::2] %}
-        {{ episode_box( episode_1=2*(loop.index-1) ) }}
+      <!-- We need to pass in the episode number but only if it's a multiple of 2
+          So we check whether the index (which should start at 0) is a multiple of 2 -->
+      {% for ep_num in audiodocs %}
+        {% set my_index = loop.index-1 %}
+        {% if my_index is divisibleby(2) %}
+          {{ episode_box( episode_1=my_index ) }}
+        {% endif %}
       {% endfor %}
 
       </div>
