--- a/app/templates/archive_page.html
+++ b/app/templates/archive_page.html
@@ -7,7 +7,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="{{audiodocs[0].og_description}}">
+  <meta name="description" content="Know it Wall is a place for inquisitive minds. From sciences to arts, let world-class researchers excite your curiosity.">
   <meta name="keywords" content="Knowitwall, Know It Wall, audio-documentary, audiodoc, outreach, academia, insightful, science, humanities">
   <meta name="author" content="">
   <meta property="og:image" content="https://pbs.twimg.com/profile_banners/3297484981/1450923489/1500x500" />
