--- a/app/templates/audiodoc_annotations.html
+++ b/app/templates/audiodoc_annotations.html
@@ -488,8 +488,11 @@
 <script type="text/javascript">
 jQuery(function ($) {
     // Customise the default plugin options with the third argument.
+    // change the tokenUrl to work locally or remotely:
+    // http://knowitwall.com/api/token
+    // http://localhost:5000/api/token
     $('body').annotator({readOnly: {{read_only}}})
-              .annotator('setupPlugins', {tokenUrl: 'http://localhost:5000/api/token'},{
+              .annotator('setupPlugins', {tokenUrl: 'http://knowitwall.com/api/token'},{
                 Tags: false,
                 Filter: false,
                 Permissions:false
