scrolly thing for episode page fixd

--- a/app/templates/audiodoc.html
+++ b/app/templates/audiodoc.html
@@ -315,7 +315,7 @@
 
   <!-- else if there's no video -->
   {% else %}
-  <header style="background: url('{{ audiodocs[0].topic_image }}') fixed; background-repeat: no-repeat; background-size:cover;background-attachment:scroll">
+  <header style="background: url('{{ audiodocs[0].topic_image }}') fixed; background-repeat: no-repeat; background-size:cover;background-attachment:fixed">
     <div class="container">
       <div class="row">
         <div class="col-lg-10 col-lg-offset-1 text-center">
