--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,26 +12,37 @@
           <h3>Follow us</h3>
           <ul class="list-inline">
             <li>
-              <a href="https://www.youtube.com/channel/UC4K0QldO7bhHuDlfEe_qZYw" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-youtube-play"></i></a>
+              <a href="https://www.facebook.com/KnowitWall/" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
             </li>
-            <li>
-              <a href="https://soundcloud.com/knowitwall" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-soundcloud"></i></a>
-            </li>
-            <li>
-              <a href="https://itunes.apple.com/gb/podcast/know-it-wall/id1078105018" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-apple"></i></a>
-            </li>
-            <li>
-              <a href="https://medium.com/know-it-wall" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-medium"></i></a>
-            </li>
+
             <li>
               <a href="https://twitter.com/KnowitWall" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
             </li>
+
             <li>
-              <a href="https://www.facebook.com/KnowitWall/" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
+              <a href="https://www.youtube.com/channel/UC4K0QldO7bhHuDlfEe_qZYw" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-youtube-play"></i></a>
             </li>
+
+            <li>
+              <a href="https://soundcloud.com/knowitwall" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-soundcloud"></i></a>
+            </li>
+
+            <li>
+              <a href="https://itunes.apple.com/gb/podcast/know-it-wall/id1078105018" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-apple"></i></a>
+            </li>
+
+            <li>
+              <a href="https://www.instagram.com/know.it.wall/" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-instagram"></i></a>
+            </li>
+
+            <li>
+              <a href="https://medium.com/know-it-wall" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-medium"></i></a>
+            </li>
+
             <li>
               <a href="http://feeds.soundcloud.com/users/soundcloud:users:193446703/sounds.rss" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-rss"></i></a>
             </li>
+
           </ul>
         </div>
 
