--- a/app/templates/archive_page.html
+++ b/app/templates/archive_page.html
@@ -23,11 +23,14 @@
   <link href="/static/css/bootstrap.min.css" rel="stylesheet">
   <link href="/static/css/knowitwallredux.css" rel="stylesheet">
 
+  <link href="/static/css/knowitwall_base.css" rel="stylesheet">
+
 
   <!-- TEST: bootstrap toggle -->
     <!-- <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet"> -->
 
   <!-- HACK: just attached homepage_redesign.css to get the box stylings -->
+
   <link href="/static/css/archive_extra.css" rel="stylesheet">
 
   <link href="/static/css/archive_page.css" rel="stylesheet">
@@ -244,8 +247,8 @@ hidden
           <li class="page-scroll">
             <a href="#page-top" >All Episodes</a>
           </li>
-          <li>
-            <a href="https://twitter.com/KnowitWall" target="_blank" class=""><i class="fa fa-fw fa-twitter"></i></a>
+          <li class="navbar_hamburger">
+            <a href="https://www.facebook.com/KnowitWall/" target="_blank"><i class="fa fa-fw fa-facebook"></i></a>
           </li>
         </ul>
       <!-- /.navbar-collapse -->
