footer: team@knowitwall is now clickeable

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -56,7 +56,7 @@
           Copyright &copy; Know it Wall <span id="copyright_year"></span>
         </div>
         <div class="col-lg-4">
-          team@knowitwall.com
+          <a href="mailto:team@knowitwall.com">team@knowitwall.com</a> 
         </div>
         <div class="col-lg-4">
           <a href="{{url_for('terms')}}" target='_blank' class="footer-info">Terms of Use</a>
