--- a/app/static/css/annotator-extensions.css
+++ b/app/static/css/annotator-extensions.css
@@ -11,15 +11,26 @@
 }
 #annotator-close_span {
   position: absolute;
-  left: 479px;
-  top: -17px;
+  left: 455px;
+  top: 13px;
+  cursor: pointer;
+  opacity: 0.8;
+}
+#annotator-question_mark{
+  position: absolute;
+  left: 434px;
+  top: 17px;
   cursor: pointer;
 }
 /* close button */
 .annotator-close{
   width: 27px;
 }
-.annotator_close_mouseover{
+.annotator-question_mark{
+  width: 11px;
+  opacity: 0.8;
+}
+.annotator_close_mouseover, .annotator_question-mark_mouseover{
   visibility: hidden;
   position: absolute;
   bottom: 35px;
@@ -27,8 +38,22 @@
   font-size: 12px;
   color: #3c3c3c;
 }
+/*.annotator_close_mouseover, .annotator_question-mark_mouseover{
+  visibility: visible;
+}*/
+
+#annotator-question_mark:hover .annotator_question-mark_mouseover{
+  visibility: visible;
+}
 #annotator-close_span:hover .annotator_close_mouseover{
   visibility: visible;
+}
+.annotator_question-mark_mouseover{
+  width: 50px;
+  position: relative;
+  bottom: 20px;
+  right: 46px;
+  opacity: 0.8;
 }
 .knowit_button{
   border: 1.5px solid black;
@@ -53,8 +78,8 @@
 }
 .knowit_img{
   width:125px;
-  margin-left:46%;
-  border:1px solid #2c3e50;
+  margin-left:35%;
+  /*border:1px solid #2c3e50;*/
   border-radius:10px;
   padding:7px;
   margin-bottom:6px;
