annotation hack: looks good. Not very resonsive though

--- a/app/templates/episode_page_annotations.html
+++ b/app/templates/episode_page_annotations.html
@@ -489,7 +489,7 @@ jQuery(function ($) {
     // http://knowitwall.com/api/token
     // http://localhost:5000/api/token
     $('body').annotator({readOnly: {{read_only}}})
-              .annotator('setupPlugins', {tokenUrl: 'http://knowitwall.com/api/token'},{
+              .annotator('setupPlugins', {tokenUrl: 'http://localhost:5000/api/token'},{
                 Tags: false,
                 Filter: false,
                 Permissions:false
