--- a/app/static/css/annotator-KIW.css
+++ b/app/static/css/annotator-KIW.css
@@ -239,25 +239,35 @@
   color: #3c3c3c;
   font-size: 16px;
   padding-left:14px;
+  padding-right:14px;
 }
-
+.annotator-viewer #knowit_explanation{
+  color: #3c3c3c;
+  font-size: 13px;
+  font-style: italic;
+  display: none;
+  background: rgba(226, 226, 226, 0.42);
+  padding: 7px;
+  margin: 20px;
+  border-radius: 5px;
+}
 .annotator-viewer .knowit_image{
    padding-bottom:12px;
    opacity: 1;
    width: 100%;
    height: 100%;
-   padding-left: 20px;
-   padding-right: 20px;
+   padding-left: 14px;
+   padding-right: 14px;
  }
  .annotator-viewer .knowit_title{
    font-size: 19px;
-   padding-left: 5px;
+   padding-left: 14px;
    color:black;
  }
 .annotator-viewer .knowit_url{
   font-size: 13px;
   padding-top: 6px;
-  padding-left: 5px;
+  padding-left: 14px;
 }
 .annotator-viewer .annotator-controls {
     position: relative;
