--- a/app/templates/knowitwall.html
+++ b/app/templates/knowitwall.html
@@ -403,9 +403,9 @@
             </div>
             <div class="col-md-6">
               <div class="vertical-line about_description">
-              <p class = 'justify'>Know it Wall is a place for inquisitive minds. From sciences to arts, let world-class researchers excite your curiosity.</p>
+              <p class = 'justify'>Know it Wall (KiW) is a place for inquisitive minds. From sciences to arts, let world-class researchers excite your curiosity.</p>
               <br>
-              <p class = 'justify'>We work with academics to make audio and video documentaries, as well as short articles, that explain what is cool or interesting about the subjects they dedicate their lives to. From <i>Stegosaurus</i> to Shakespeare, protons to pandemics, there’s no limit to what you could encounter!</p>
+              <p class = 'justify'>Based at UCL and Imperial College London, KiW works with academics to make audio and video documentaries, as well as short articles, that explain what is cool or interesting about the subjects they dedicate their lives to. From <i>Stegosaurus</i> to Shakespeare, protons to pandemics, there’s no limit to what you could encounter!</p>
               </div>
             </div>
           </div>
