--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,9 +8,9 @@
   <div class="footer-above">
     <div class="container">
       <div class="row">
-        <div class="col-md-6 col-md-offset-3">
+        <div class="col-md-6">
           <h3>Follow us</h3>
-          <ul class="list-inline">
+          <ul class="list-inline" style="padding-top:13px;">
             <li>
               <a href="https://www.facebook.com/KnowitWall/" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
             </li>
@@ -44,6 +44,18 @@
             </li>
 
           </ul>
+        </div>
+        <div class="col-md-6">
+          <h3>Sponsors</h3>
+          <div class="row">
+            <div class="col-md-4 col-md-offset-2">
+              <img src="/static/Images/UCLe-logo_small.png" alt="" width="100">
+            </div>
+            <div class="col-md-4" style="margin-top:23px;">
+              <img src="/static/Images/jisc-logo.png" alt="" width="100">
+            </div>
+          </div>
+
         </div>
 
       </div>
