--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -48,11 +48,11 @@
         <div class="col-md-6">
           <h3>Sponsors</h3>
           <div class="row">
-            <div class="col-md-4 col-md-offset-2">
-              <img src="/static/Images/UCLe-logo_small.png" alt="" width="100">
-            </div>
-            <div class="col-md-4" style="margin-top:23px;">
+            <div class="col-md-4 col-md-offset-2" style="margin-top:23px;">
               <img src="/static/Images/jisc-logo.png" alt="" width="100">
+            </div>
+            <div class="col-md-4">
+              <img src="/static/Images/UCLe-logo_small.png" alt="" width="100">
             </div>
           </div>
 
