--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -48,11 +48,59 @@
         <div class="col-md-6">
           <h3>Sponsors</h3>
           <div class="row">
-            <div class="col-md-4 col-md-offset-2" style="margin-top:23px;">
-              <img src="/static/Images/jisc-logo.png" alt="" width="100">
+            <div class="col-md-4 col-md-offset-2">
+              <!-- Jisc logo -->
+              <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+              	 viewBox="470 280 470 250" style="enable-background:new 0 0 1366 768;" xml:space="preserve" width="150px">
+                 <style type="text/css">
+                 	/*.jisc_fill{fill:white;}*/
+                 </style>
+                 <g>
+              <path class="footer_logo_fill" d="M520.2,428.7c-0.8,1.2-2.3,4.3-4.5,6.8c-4.1,4.6-2.4,7.8,1.6,11.3c8.2,7.1,17.4,11.9,28.1,13.4c29.6,4.4,57-8.9,59.1-41
+              	c2.3-35.5,1.1-71.3,1.1-106.9c0-1.4-3-4-4.8-4.1c-6.2-0.5-12.5,0.1-18.6-0.3c-5.7-0.4-7.4,1.6-7.3,7.3c0.3,28,0.2,56,0.1,84
+              	c0,5.7-0.5,11.5-1.3,17.1c-1.9,12.5-9.9,20.3-22.5,19.5C541.2,435.1,531.6,431.5,520.2,428.7z M669.8,430.9
+              	c-1.5,2.7-2.5,4.6-3.5,6.5c-4.6,9.1-4.4,9.9,4.6,14.7c16.9,9.1,34.9,11.4,53.4,6.7c14.5-3.7,24.4-15.1,25.1-27.9
+              	c1.1-18.3-4.2-27.2-20.7-34.3c-3.7-1.6-7.6-2.7-11.5-4c-7.2-2.4-14.7-4.3-21.6-7.4c-2.4-1.1-4.8-5.2-4.6-7.8
+              	c0.2-2.6,3.2-5.5,5.7-7.2c1.9-1.3,5.1-1.5,7.6-1.3c11.3,1.2,22.5,2.7,34.6,4.1c1.1-3,2.9-6.9,3.9-11c0.4-1.6-0.8-4.7-2.1-5.4
+              	c-17.3-8.9-35.4-13-54.6-6.5c-14.8,5-23.1,18-22,33.2c1.3,16.6,12.9,23.5,26.7,28.1c8.4,2.8,16.9,4.9,25.3,7.8c5.9,2,9,7.1,6.2,12.4
+              	c-1.8,3.4-7.1,6.4-11.2,6.9C697.1,440.4,683.3,437.8,669.8,430.9z M844.9,428.3c-5.1,2.9-9.7,6-14.7,8.1
+              	c-19.4,7.8-36.5-0.2-41.5-19.8c-1.8-7-2.2-14.8-1.4-22c2.1-17.7,14.9-27.8,32.5-25.5c6.3,0.8,12.3,4.6,18.4,7.4
+              	c2.2,1,4.1,2.9,6.4,4.6c2.6-3.8,5.2-6.7,6.7-10.2c0.8-2,0.7-5.6-0.6-7c-25.3-27.8-70.8-20.1-85.5,14.6c-6.3,14.9-6.4,30.2-1.7,45.6
+              	c9.9,32.4,48.2,47,76.7,29.4C854.9,444.3,855.2,442.6,844.9,428.3z M649,349.5c-7.2,0-13.4,0.4-19.5-0.1c-6-0.5-7.2,2.1-7.2,7.5
+              	c0.2,27.7,0.1,55.4,0.1,83.2c0,19.6,0,19.4,19.7,19.4c6,0,7.1-2.3,7-7.6c-0.2-24.4-0.1-48.8-0.1-73.1C649,369.3,649,360,649,349.5z
+              	 M635.8,299.5c-8.8,0.1-16.6,8.3-16.4,17.4c0.2,8.8,7.7,16.3,16.5,16.4c9,0.1,17-7.8,16.9-16.8C652.8,307.6,644.5,299.4,635.8,299.5
+              	z"/>
+              </g>
+              </svg>
             </div>
             <div class="col-md-4">
-              <img src="/static/Images/UCLe-logo_small.png" alt="" width="100">
+              <!-- UCLe logo -->
+              <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+              	 viewBox="405 250 470 250" style="enable-background:new 0 0 1366 768;" xml:space="preserve" width="150px">
+              <style type="text/css">
+              	.footer_logo_UCLe_gap{fill:transparent;}
+              </style>
+              <g>
+              	<path class="footer_logo_fill" d="M705.2,295.8c0.9,3.2,2.5,6.3,2.6,9.5c0.2,25.9,0.1,51.9,0.2,77.8c0,9.4,0.7,18.6,7.8,26.1c1,1.1,0.2,5.6-1.2,7.2
+              		c-11.1,11.8-31.4,9.3-38.9-5.1c-3.5-6.7-5.9-5.6-10.5-1.6c-24.4,20.9-61.6,16.8-76.2-8.7c-9.3-16.1-8.7-33.1,1-48.7
+              		c10-16.2,25.5-23.3,44.4-20.7c8.2,1.1,16.6,4,23.8,8c7.9,4.4,9.8,14,6.4,21.8c-3.2,7.2-10.5,11.3-19.2,9.3c-2.8-0.7-5-4.2-7.2-6.7
+              		c-0.7-0.8,0-2.9-0.7-3.8c-2.4-3.5-4.9-9.1-7.8-9.4c-3.1-0.3-8.1,3.7-9.9,7.2c-8.2,15.2-1.9,35.5,11.9,40.2
+              		c11.4,3.9,31.7-1.7,38.8-11.3c2-2.7,2.7-6.9,2.8-10.5c0.2-23,0.4-46,0-69c-0.1-7.6,2-10.9,9.9-10.1c3,0.3,6.2-0.9,9.3-1.3
+              		C696.7,295.8,700.9,295.8,705.2,295.8z"/>
+              	<path class="footer_logo_fill" d="M752.1,391.2c14.4,16.3,31.4,8.4,49.5,2.2c-1.9,10.3-7.3,16.3-13.9,20.3c-9.4,5.7-13,13.2-12.3,23.9
+              		c0.6,8.4-7.4,15.2-16.6,15.3c-9.1,0.1-16.7-6.2-16.3-14.6c0.5-11.7-4-19.9-13-27.4c-14.2-11.9-18.3-29-12.4-49.8
+              		c5.1-18,22.8-30.5,41.8-30.8c7.6-0.1,15.6,0.8,22.7,3.2c15.5,5.1,23.3,17.6,21.2,31.6c-1.7,11.7-14.7,21.2-30.1,21.7
+              		c-6.7,0.2-13.5,0-20.2,0C752.3,388.3,752.2,389.7,752.1,391.2z M770.2,356.2c-0.2-3.7-3-6.5-8.5-6.4c-6.5,0.1-13.5,8.3-12.7,15.7
+              		c0.2,2,3.8,5,6,5.2C763.6,371.3,770.3,365.3,770.2,356.2z"/>
+              	<path class="footer_logo_fill" d="M540.2,408.1c-4.8,4.2-8.5,8.3-12.9,11.1c-16.5,10.7-35.3,1.5-36.8-18c-0.8-10.4-0.2-20.9-0.5-31.3
+              		c-0.3-8.6-1-17.1-8.2-23.5c-4.2-3.8-1.7-7.4,1.7-10c7.9-6,16.8-6.7,25.8-3.1c9.1,3.7,13.5,11.2,13.9,20.7
+              		c0.4,10.7,0.1,21.4,0.2,32.1c0,2.6,0.1,5.4,0.9,7.9c2.1,6.4,7.8,7.6,11.1,2c2.7-4.6,4.4-10.4,4.6-15.7c0.7-12.8,0.4-25.7,0.1-38.5
+              		c-0.1-5.5,1.6-7.9,7.3-7.6c6.7,0.3,13.4,0.3,20.1,0c5.6-0.2,7.3,2.2,7.2,7.7c-0.3,16.3-0.6,32.7,0.3,48.9
+              		c0.3,5.7,2.9,11.8,6.1,16.7c3.1,4.9,2.3,7.7-1.6,10.8c-11.1,9.1-26.9,6.8-35.2-5C543.1,411.6,541.7,410,540.2,408.1z"/>
+              	<path class="footer_logo_UCLe_gap" d="M770.2,356.2c0.1,9-6.6,15.1-15.1,14.5c-2.2-0.2-5.8-3.2-6-5.2c-0.8-7.5,6.2-15.6,12.7-15.7
+              		C767.2,349.7,770,352.5,770.2,356.2z"/>
+              </g>
+              </svg>
             </div>
           </div>
 
