--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,7 +9,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <h3>Follow us</h3>
+          <h3 class="footer_follow_us">Follow us</h3>
           <ul class="list-inline" style="padding-top:13px;">
             <li>
               <a href="https://www.facebook.com/KnowitWall/" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
