--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -47,7 +47,7 @@
         </div>
         <div class="col-md-6">
           <h3>Sponsors</h3>
-          <div class="row">
+          <div class="row sponsors-row">
             <div class="col-md-4 col-md-offset-2">
               <!-- Jisc logo -->
               <a id="Jisc_logo" href="https://www.jisc.ac.uk/" target="_blank">
